# corna

./: Cargo.toml  Justfile  LLM_CONTEXT.md  README.md  restart.sh
assets/shaders/: ui.frag.glsl  ui.vert.glsl
src/: app.rs  config.rs  main.rs
src/features/: clock.rs  clock_old.rs  mod.rs  pomodoro.rs
src/gfx/: anim.rs  draw.rs  gl.rs  math.rs  mod.rs
src/wayland/: egl.rs  mod.rs  window_manager.rs
